--- a/app/assets/style/all.css
+++ b/app/assets/style/all.css
@@ -1,3 +1,19 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+/* 字型載入 */
+@layer base {
+  body {
+    font-family: "Noto Sans TC", sans-serif;
+    font-size: 16px;
+    line-height: 1.5;
+    background-color: #F0F0F0;
+  }
+}
+
+@layer utilities{
+  .squada{
+    font-family: 'Squada One', cursive;
+  }
+} 
