--- a/app/assets/style/all.css
+++ b/app/assets/style/all.css
@@ -20,7 +20,7 @@
     writing-mode: vertical-lr;
   }
   .btn {
-    @apply squada w-[132px] block text-lg leading-[1.0555] py-2 px-12 border;
+    @apply squada w-[132px] block text-lg leading-[1.0555] py-2 px-12 ring-1 ring-black;
   }
   .btn-white {
     @apply bg-white ml-auto;
@@ -34,5 +34,8 @@
     border-style: solid;
     border-width: 0 0 16px 16px;
     border-color: transparent transparent #E6553B transparent;
+  }
+  .border-black {
+    border-color: transparent transparent black transparent;
   }
 }
