--- a/app/layout.ejs
+++ b/app/layout.ejs
@@ -5,7 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title><%- title %></title>
+    <!-- css -->
     <link rel="stylesheet" href="./assets/style/all.css" />
+    <link rel="stylesheet" href="assets/style/style.css">
 
     <!--外部字型 -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
