--- a/app/assets/style/all.css
+++ b/app/assets/style/all.css
@@ -10,6 +10,11 @@
     line-height: 1.5;
     background-color: #f0f0f0;
   }
+  img{
+    width: 100%;
+    height: auto;
+    display: block;
+  }
 }
 
 @layer utilities {
