--- a/app/assets/style/all.css
+++ b/app/assets/style/all.css
@@ -10,25 +10,23 @@
     line-height: 1.5;
     background-color: #f0f0f0;
   }
-  img{
-    width: 100%;
-    height: auto;
-    display: block;
-  }
 }
 
 @layer utilities {
   .squada {
     font-family: "Squada One", cursive;
   }
+  .paytone {
+    font-family: 'Paytone One', sans-serif;
+  }
   .writing_lr {
     writing-mode: vertical-lr;
   }
   .btn {
-    @apply squada w-[132px] block text-lg leading-[1.0555] py-2 px-12 ring-1 ring-black;
+    @apply squada w-[132px] block text-lg leading-[1.0555] py-2 px-12 ;
   }
   .btn-white {
-    @apply bg-white ml-auto;
+    @apply bg-white ml-auto ring-1 ring-black;
   }
   .triangle {
     position: absolute;
