剩下swiper需調整

--- a/app/assets/style/all.css
+++ b/app/assets/style/all.css
@@ -44,4 +44,10 @@
   .border-black {
     border-color: transparent transparent black transparent;
   }
+  .border-primary {
+    border-color: transparent transparent #E6553B transparent;
+  }
+  .grayscale{
+    -webkit-filter:grayscale(1);
+    }
 }
