--- a/app/assets/style/_index.scss
+++ b/app/assets/style/_index.scss
@@ -1,63 +1,108 @@
-html,
-      body {
-        position: relative;
-        height: 100%;
-      }
+// html,
+// body {
+//   position: relative;
+//   height: 100%;
+// }
 
-      body {
-        background: #eee;
-        font-family: Helvetica Neue, Helvetica, Arial, sans-serif;
-        font-size: 14px;
-        color: #000;
-        margin: 0;
-        padding: 0;
-      }
 
-      .swiper {
-        width: auto;
-        height: auto;
-      }
+.swiper {
+  width: auto;
+  height: auto;
+}
 
-      .swiper-slide {
-        text-align: center;
-        font-size: 18px;
-        background: #fff;
+.swiper-slide {
+  text-align: center;
+  font-size: 18px;
+  background: #fff;
+  @media (min-width:991px) {
+    width: 306px !important;
+  }
 
-        /* Center slide text vertically */
-        display: -webkit-box;
-        display: -ms-flexbox;
-        display: -webkit-flex;
-        display: flex;
-        -webkit-box-pack: center;
-        -ms-flex-pack: center;
-        -webkit-justify-content: center;
-        justify-content: center;
-        -webkit-box-align: center;
-        -ms-flex-align: center;
-        -webkit-align-items: center;
-        align-items: center;
-      }
+  /* Center slide text vertically */
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: -webkit-flex;
+  display: flex;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  -webkit-justify-content: center;
+  justify-content: center;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  -webkit-align-items: center;
+  align-items: center;
+}
 
-      .swiper-slide img {
-        display: block;
-        width: 100%;
-        height: 100%;
-        object-fit: cover;
-      }
-      .swiper-wrapper{
-        width: 100% !important;
-        height: 100% !important;
-      }
-      .swiper-slide-next{
-        height: 439px !important;
-      }
-      .swiper-pagination-bullet{
-        border-radius: 0% !important;
-        background-color: #000000 !important;
-        opacity: 1 !important;
-      }
-      .swiper-pagination-bullet-active{
-        border-radius: 0% !important;
-        width: 16px !important;
-        background-color: #E6553B !important;
-      }
+.swiper-slide img {
+  display: block;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+.swiper .swiper-wrapper {
+  width: 100%;
+  height: 100%;
+}
+.swiper .swiper-pagination {
+  position: static;
+  margin-top: 24px;
+}
+.swiper .swiper-pagination-bullet {
+  border-radius: 0%;
+  background-color: #000000;
+  opacity: 1;
+}
+.swiper .swiper-pagination-bullet-active {
+  border-radius: 0%;
+  width: 16px;
+  background-color: #e6553b;
+}
+
+.swiper-slide-next {
+  @media (min-width:991px) {
+    .display {
+      display: block;
+      -webkit-filter:grayscale(0);
+    }
+  }
+}
+
+
+@media (min-width:991px) {
+  .swiper-slide{
+    width: 29.61111% !important;
+  }
+  .swiper-slide-next{
+    width: 49.07407% !important;
+  }
+  .swiper-slide-active{
+    width: 29.61111% !important;
+  }
+}
+
+
+
+.grid {
+  margin-left: -12px;
+  margin-right: -12px;
+}
+
+.grid-sizer,
+.grid-item {
+  width: 50%;
+  padding-left: 12px;
+  padding-right: 12px;
+}
+
+@media (min-width: 991px) {
+  .grid-sizer,
+  .grid-item {
+    width: 33.33333%;
+  }
+}
+@media (min-width: 1440px) {
+  .grid-sizer,
+  .grid-item {
+    width: 25%;
+  }
+}
