--- a/app/assets/style/style.css
+++ b/app/assets/style/style.css
@@ -1,18 +1,3 @@
-html,
-body {
-  position: relative;
-  height: 100%;
-}
-
-body {
-  background: #eee;
-  font-family: Helvetica Neue, Helvetica, Arial, sans-serif;
-  font-size: 14px;
-  color: #000;
-  margin: 0;
-  padding: 0;
-}
-
 .swiper {
   width: auto;
   height: auto;
@@ -27,6 +12,11 @@ body {
   justify-content: center;
   align-items: center;
 }
+@media (min-width: 991px) {
+  .swiper-slide {
+    width: 306px !important;
+  }
+}
 
 .swiper-slide img {
   display: block;
@@ -36,23 +26,91 @@ body {
      object-fit: cover;
 }
 
-.swiper-wrapper {
-  width: 100% !important;
-  height: 100% !important;
+.swiper .swiper-wrapper {
+  width: 100%;
+  height: 100%;
 }
 
-.swiper-slide-next {
-  height: 439px !important;
+.swiper .swiper-pagination {
+  position: static;
+  margin-top: 24px;
 }
 
-.swiper-pagination-bullet {
-  border-radius: 0% !important;
-  background-color: #000000 !important;
-  opacity: 1 !important;
+.swiper .swiper-pagination-bullet {
+  border-radius: 0%;
+  background-color: #000000;
+  opacity: 1;
 }
 
-.swiper-pagination-bullet-active {
-  border-radius: 0% !important;
-  width: 16px !important;
-  background-color: #E6553B !important;
+.swiper .swiper-pagination-bullet-active {
+  border-radius: 0%;
+  width: 16px;
+  background-color: #e6553b;
+}
+
+@media (min-width: 991px) {
+  .swiper-slide-next .display {
+    display: block;
+    -webkit-filter: grayscale(0);
+  }
+}
+
+@media (min-width: 991px) {
+  .swiper-slide {
+    width: 29.61111% !important;
+  }
+  .swiper-slide-next {
+    width: 49.07407% !important;
+  }
+  .swiper-slide-active {
+    width: 29.61111% !important;
+  }
+}
+.grid {
+  margin-left: -12px;
+  margin-right: -12px;
+}
+
+.grid-sizer,
+.grid-item {
+  width: 50%;
+  padding-left: 12px;
+  padding-right: 12px;
+}
+
+@media (min-width: 991px) {
+  .grid-sizer,
+.grid-item {
+    width: 33.33333%;
+  }
+}
+@media (min-width: 1440px) {
+  .grid-sizer,
+.grid-item {
+    width: 25%;
+  }
+}
+.grid {
+  margin-left: -12px;
+  margin-right: -12px;
+}
+
+.grid-sizer,
+.grid-item {
+  width: 50%;
+  padding-left: 12px;
+  padding-right: 12px;
+}
+
+@media (min-width: 991px) {
+  .grid-sizer,
+.grid-item {
+    width: 33.33333%;
+  }
+}
+@media (min-width: 1440px) {
+  .grid-sizer,
+.grid-item {
+    width: 25%;
+  }
 }/*# sourceMappingURL=style.css.map */
