--- a/app/assets/style/all.css
+++ b/app/assets/style/all.css
@@ -51,3 +51,29 @@
     -webkit-filter:grayscale(1);
     }
 }
+
+/* masonry */
+.grid {
+  margin-left: -12px;
+  margin-right: -12px;
+}
+
+.grid-sizer,
+.grid-item {
+  width: 50%;
+  padding-left: 12px;
+  padding-right: 12px;
+}
+
+@media (min-width: 991px) {
+  .grid-sizer,
+  .grid-item {
+    width: 33.33333%;
+  }
+}
+@media (min-width: 1440px) {
+  .grid-sizer,
+  .grid-item {
+    width: 25%;
+  }
+}
