--- a/app/assets/style/style.css
+++ b/app/assets/style/style.css
@@ -6,16 +6,11 @@
 .swiper-slide {
   text-align: center;
   font-size: 18px;
-  background: #fff;
+  background: transparent;
   /* Center slide text vertically */
   display: flex;
   justify-content: center;
   align-items: center;
-}
-@media (min-width: 991px) {
-  .swiper-slide {
-    width: 306px !important;
-  }
 }
 
 .swiper-slide img {
@@ -57,12 +52,12 @@
 
 @media (min-width: 991px) {
   .swiper-slide {
-    width: 29.61111% !important;
+    width: 30.61111% !important;
   }
   .swiper-slide-next {
-    width: 49.07407% !important;
+    width: 50.07407% !important;
   }
   .swiper-slide-active {
-    width: 29.61111% !important;
+    width: 30.61111% !important;
   }
 }/*# sourceMappingURL=style.css.map */
