--- a/app/layout.ejs
+++ b/app/layout.ejs
@@ -91,9 +91,9 @@
           el: ".swiper-pagination",
           clickable: true,
         },
-        autoplay: {
-          delay: 2000,
-        },
+        // autoplay: {
+        //   delay: 2000,
+        // },
         breakpoints: {
           // when window width is >= 320px
           375: {
